Mobile changes to fix content from overflowing outside the viewing area. Slight color changes. Added a hero image of Portland, OR and a new profile image. Changed some wording for clarity and accuracy.

--- a/css/style.css
+++ b/css/style.css
@@ -9,17 +9,15 @@ body {
 
 .main-header,
 .main-footer,
-.footer-col {
+.footer-col,
+.hero {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
 }
 
-.other,
-.social,
-.copy {
-	display: initial;
-	text-align: center;
+.main-header {
+	padding: 30px 0;
 }
 
 h1 {
@@ -34,11 +32,7 @@ h3 {
 }
 
 small {
-	font-size: small;
-}
-
-.project > header > h3 {
-	padding-bottom: 15px;
+	font-size: 0.75em;
 }
 
 .main-header,
@@ -46,30 +40,9 @@ small {
 	background-color: #2c3e50;
 }
 
-.main-footer > hr {
-	display: none;
-}
-
-.main-footer > div > h3 {
-	padding-bottom: 20px;
-}
-
 a {
 	color: cornflowerblue;
 	text-decoration: none;
-}
-
-#devicons {
-	display: flex;
-  flex-wrap: wrap;
-}
-
-.icons {
-	flex-grow: 1;
-	padding: 10px;
-	font-size: 3em;
-	flex-wrap: wrap;
-	justify-content: space-around;
 }
 
 hr {
@@ -82,51 +55,98 @@ hr {
 	background: #F8F8F8;
 }
 
-.main-image {
-	margin-right: 20px;
-	margin-left: -20px;
-	align-self: center;
+.hero {
+	flex-grow: 1;
+	margin: auto;
+	display: flex;
+	padding: 40px;
+	min-height: 70vh;
+	flex-direction: column;
+	background-size: cover;
+	-o-background-size: cover;
+  -ms-background-size: cover;
+	background-position: 50% 0;
+  -moz-background-size: cover;
+	background-repeat: no-repeat;
+  -webkit-background-size: cover;
+	background-image: url('../img/pdx.jpg');
 }
 
 .logo {
-	max-width: 20vw;
-	border-radius: 50%;
-}
-
-#projects,
-.primary {
 	display: flex;
-	flex-direction: row;
-	justify-content: center;
+	align-self: center;
+	max-width: 55vw;
+	max-height: 55vw;
+	border-radius: 50%;
+	border: 2px slategrey dotted;
 }
 
-.primary-text {
-	display: initial;
+.headline {
+	margin-top: 80px;
+	text-shadow: 2px 2px 2px #FFF;
+}
+
+.center {
+	margin-top: 10px;
+	text-align: center;
+	text-shadow: 2px 2px 2px #FFF;
 }
 
 .projects-container {
 	display: flex;
 	flex-wrap: wrap;
+	max-width: 100%;
+}
+
+#projects {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 }
 
 .project {
 	flex: 1;
 	padding: 10px;
+	max-width: 100%;
 	flex-wrap: wrap;
 	min-width: 380px;
 	margin-top: 30px;
 }
 
-.main-header {
-	padding: 30px 0;
+.project > header > h3 {
+	padding-bottom: 15px;
 }
 
-.learn {
-	padding: 20px 20px 0 0;
+.other,
+.social,
+.copy {
+	display: initial;
+	text-align: center;
+}
+
+#devicons {
+	display: flex;
+  flex-wrap: wrap;
+}
+
+.icons {
+	flex-grow: 1;
+	padding: 10px;
+	font-size: 2.5em;
+	flex-wrap: wrap;
+	justify-content: space-around;
 }
 
 .thanks {
 	order: -1;
+}
+
+.main-footer > hr {
+	display: none;
+}
+
+.main-footer > div > h3 {
+	padding-bottom: 20px;
 }
 
 .footer-col {
@@ -150,6 +170,11 @@ hr {
 		margin: 40px 5%;
 	}
 
+	.logo {
+		max-width: 30vw;
+		max-height: 30vw;
+	}
+
 	.projects-container,
 	.banner {
 		max-width: 90vw;
@@ -160,6 +185,10 @@ hr {
 		margin: 5px 10px;
 	}
 
+	.icons {
+		font-size: 3em;
+	}
+
 	.thanks {
 		order: 0;
 	}
@@ -168,8 +197,22 @@ hr {
 		display: initial;
 	}
 
-	.learn {
-		padding: 20px 0 0 20px;
+}
+
+@media (min-width: 1979px) {
+	body {
+		font-size: 1.5em;
+	}
+
+	.projects-container,
+	.banner {
+		max-width: 85vw;
+		align-items: center;
+	}
+
+	.logo {
+		max-width: 20vw;
+		max-height: 20vw;
 	}
 
 }
